--- a/Cata-Teo.css
+++ b/Cata-Teo.css
@@ -7,25 +7,54 @@ body{
 
 }
 
-#header{
+.header{
   display: none;
-  color: #FCDEF0;
+  /*color: #FCDEF0 !important;*/
   opacity:1.0;
   font-family: 'Dancing Script', cursive;
   font-size: 35px;
   background-color: rgb(23,00,11);
   width:100%;
-  height:70px !important;
-  position:relative;
-  margin-top: 0px;
+  margin-top: 0px !important;
+  color: #FCDEF0;
 
 }
-#name{
-  display:flex;
-  position: absolute;
-  margin-top: 30px;
-  margin-left: 30px;
+.container-fluid{
+  margin-top: 0.1% !important;
+  border-bottom: 1px ridge;
+  border-color: rgba(255, 220, 255, 0.6);
+
 }
+ul{
+  margin-left: 70% !important;
+  list-style: none;
+  background-color: rgb(23,00,11);
+  width: 100%;
+  position: absolute;
+  float: none;
+  border-color: rgba(219, 142, 194, 0.0)!important;
+  /*color:#ddd !important;*/
+}
+li>a{
+  display:inline;
+  text-decoration: none !important;
+  color: #FCDEF0 !important;
+  font-size: 20px;
+  padding-left: 20px;
+  position:relative;
+  /*background-color: #FCDEF0;*/
+}
+.navbar-default>.nav nav-tabs>li > a:focus{
+  background-color: #FDEFF1;
+}
+.navbar-text{
+  color: #FCDEF0 !important;
+  display:flex;
+  position: fixed;
+  position:absolute;
+  margin-left: 5% !important;
+}
+
 /*p{
   margin-top: 10px;
   position relative;
@@ -41,7 +70,6 @@ body{
   overflow:visible;
   color: #FCDEF0;
   font-family: 'Dancing Script', cursive;
-
   font-size: 60px;
   margin-top: 10% !important;
   margin-bottom: 10%;
