--- a/Cata-Teo.css
+++ b/Cata-Teo.css
@@ -8,7 +8,7 @@ body{
 }
 
 .header{
-  display: none;
+  /*display: none;*/
   /*color: #FCDEF0 !important;*/
   opacity:1.0;
   font-family: 'Dancing Script', cursive;
@@ -16,7 +16,7 @@ body{
   background-color: rgb(23,00,11);
   width:100%;
   margin-top: 0px !important;
-  color: #FCDEF0;
+
 
 }
 .container-fluid{
@@ -26,23 +26,19 @@ body{
 
 }
 ul{
-  margin-left: 70% !important;
+  margin-left: 65% !important;
   list-style: none;
   background-color: rgb(23,00,11);
-  width: 100%;
-  position: absolute;
+  position: relative;
   float: none;
   border-color: rgba(219, 142, 194, 0.0)!important;
-  /*color:#ddd !important;*/
 }
 li>a{
   display:inline;
-  text-decoration: none !important;
   color: #FCDEF0 !important;
   font-size: 20px;
   padding-left: 20px;
   position:relative;
-  /*background-color: #FCDEF0;*/
 }
 .navbar-default>.nav nav-tabs>li > a:focus{
   background-color: #FDEFF1;
@@ -54,7 +50,20 @@ li>a{
   position:absolute;
   margin-left: 5% !important;
 }
-
+.img-rounded{
+  /*border-radius:70% !important;*/
+  border-top-left-radius: 50% !important;
+  border-top-right-radius: 50% !important;
+  border-bottom-left-radius: 50% !important;
+  border-bottom-right-radius: 50% !important;
+  background-position: 30% 70% !important;
+  margin-top: 3% !important;
+  height:170px !important;
+  weight:150px !important;
+  margin-left: 33% !important;
+  position:fixed;
+  shape-outside: ellipse();
+}
 /*p{
   margin-top: 10px;
   position relative;
@@ -64,29 +73,46 @@ li>a{
 .hello{
   /*display:none;*/
   display: flex;
+  box-shadow: rgb(23,00,11);
+  border:4px double;
+  border-color: rgba(255, 220, 255, 0.6);
+  border-radius: 10px;
   height:400px;
   background-color: rgba(100, 100, 100, 0.6);
-  position:relative;
+  position:static;
   overflow:visible;
   color: #FCDEF0;
   font-family: 'Dancing Script', cursive;
-  font-size: 60px;
-  margin-top: 10% !important;
   margin-bottom: 10%;
-  margin-left: 10%;
-  margin-right: 10%;
-
+  margin-left: 5%;
+  margin-right: 5%;
+  font-size: 40px;
+  text-align: center !important;
 }
+
 #text{
-  /*display:flex;*/
-  text-align: center;
-  margin-left: 40%;
-  line-height: 100%;
-  margin-top: 20%;
-  position: relative;
+  color: rgba(255, 220, 255, 1);
+  margin-left: 38% !important;
+  margin-top: 20% !important;
+  position:fixed;
 
 }
-
+.blockquote-reverse{
+  color: rgba(255, 220, 255, 0.6);
+  margin-left: 35%;
+  margin-top: 30%;
+  position:relative;
+  height:50px;
+  border-left: rgba(255, 220, 255, 0.0);
+}
+#cite{
+  /*margin-left: 60%;*/
+  font-size: 15px;
+  /*position: relative;*/
+}
+#quote{
+  font-size:20px;
+}
 /*#second{
   height:300px;
   width:100%;
